--- a/index.html
+++ b/index.html
@@ -785,6 +785,14 @@ Web Source [4]</section>
   </section>
 
   <section>
+    <h3>Where?</h3>
+    <aside class='notes'>
+      <p>The work presented here is predominently concerned with WHERE speech processing takes place.</p>
+      <p>Although some work does detail the route that speech processing might take through the brain, localisation of function remains at the core.</p>
+    </aside>
+  </section>
+
+  <section>
     <h3>Classic neuroimaging evidence about language processing</h3>
     <div align='left'>
       <img src='resources/scott-spect-2000.png'alt='Scott (2000), spectrogram.' style='vertical-align:top; margin:0px 25px' width=500px height=500px align='right'/>
@@ -850,12 +858,12 @@ Web Source [4]</section>
           Looked for correlations between blood flow and intelligibility of speech sounds
         </p>
         <p style='font-size:60%' align='right'>
-            Left: intelligible speech vs noise
+          Left: intelligible speech vs noise
         </p>
-          <p style='font-size:60%' align='right'>
-            Right: responses to different forms of distortion
+        <p style='font-size:60%' align='right'>
+          Right: responses to different forms of distortion
         </p>
-        </div>
+      </div>
       <aside class='notes'>
         <p>This is a good slide to introduce the notion of bottom-up and top-down processes.
           Remember: top-down modulation need not be language specific</p>
@@ -961,7 +969,7 @@ Web Source [4]</section>
       </div>
     <br/>
     <p align='right'>
-    Chinese English Spanish&nbsp;&nbsp;&nbsp;
+      Chinese English Spanish&nbsp;&nbsp;&nbsp;
     </p>
     <small align='right'>
       Valaki et al. (2004)
@@ -1021,10 +1029,10 @@ Web Source [4]</section>
         <td class='fragment' data-fragment-index='8' style='border:0px'>Also disruption to rhythm and temporal processing</td>
       </tr>
     </table>
-<!--
-    Parkinson’s speech sample
+    <!--
+Parkinson’s speech sample
 
-    courtesy of Dr Anja Lowit (Strathclyde) -->
+courtesy of Dr Anja Lowit (Strathclyde) -->
     <aside class='notes'>
     </aside>
 
@@ -1044,73 +1052,140 @@ Web Source [4]</section>
   </section>
 
   <section>
-    <h3>The Integration Problem</h3>
-    <ul>
-      <li>Behavioural data
-        (whole brain)</li>
-    <li>Localised neuro-functional data
-      (brain areas)</li>
-    <li>Localised anatomical data
-      (brain areas)</li>
-    <li>Connectivity data
-    (neuronal networks)
-      ?</li>
+    <h3>How?</h3>
+    <!--     <ul>
+<li>Behavioural data
+(whole brain)</li>
+<li>Localised neuro-functional data
+(brain areas)</li>
+<li>Localised anatomical data
+(brain areas)</li>
+<li>Connectivity data
+(neuronal networks)
+?</li> -->
     </ul>
-    <aside class='notes'>
-    </aside>
-  </section>
+  <aside class='notes'>
+    <p>The work presented here concerns HOW speech is processed by the brain.</p>
+    <p>The main focus is on the way in which the underling archetecture of the brain aids in speech processing</p>
+  </aside>
+</section>
 
-  <section>
-    <h3>Phineas Gage and the Integration Problem</h3>
-    <img src='resources/gage-2012.png' alt='Diagram of injury to Phineas Gage' style='vertical-align:top; margin:0px 25px' align='center' width=400px>
-    <br/>
-    <small>Van Horn, et al. (2012)</small>
-    <aside class='notes'>
-      <p>By assessing the famous case of Phineas Gage Van Horn et al (2012) with Diffusion Weighted Imaging (DWI) and Magnetic Resonance Imaging (MRI) they were able to determine that only 4% of Mr. Gage’s grey matter was destroyed in comparison to  11% of his white matter.</p>
-      <p>They conclude that although frontal lobe damage most certainly contributed to the functional deficits and personality changes that Mr. Gage suffered after his accident, the degree of white matter which was removed would have severely impacted on the manner in which his brain processed information.</p>
-      <p>The role of white matter is just as important in understanding the mechanics of the human brain as the role of grey matter.</p>
-    </aside>
-  </section>
+<section>
+  <h3>Phineas Gage - Modern Insights</h3>
+  <img src='resources/gage-2012.png' alt='Diagram of injury to Phineas Gage' style='vertical-align:top; margin:0px 25px' align='center' width=400px>
+  <br/>
+  <small>Van Horn, et al. (2012)</small>
+  <aside class='notes'>
+    <p>By assessing the famous case of Phineas Gage Van Horn et al (2012) with Diffusion Weighted Imaging (DWI) and Magnetic Resonance Imaging (MRI) they were able to determine that only 4% of Mr. Gage’s grey matter was destroyed in comparison to  11% of his white matter.</p>
+    <p>They conclude that although frontal lobe damage most certainly contributed to the functional deficits and personality changes that Mr. Gage suffered after his accident, the degree of white matter which was removed would have severely impacted on the manner in which his brain processed information.</p>
+    <p>The role of white matter is just as important in understanding the mechanics of the human brain as the role of grey matter.</p>
+  </aside>
+</section>
 
-  <section>
-    <a href='http://onpub.cbs.mpg.de/' data-preview-link>
-      Friederici (2011) – Web Link, Firefox & Chrome Only
-    </a>
+<section>
+  <a href='http://onpub.cbs.mpg.de/' data-preview-link>
+    Friederici (2011) – Web Link, Firefox & Chrome Only
+  </a>
 
-    <aside class='notes'>
-      <p>This link demonstrates the white matter connections which are linked to linguistic functioning in the brain. They are fro more extensive than suggested by the WLG model and are somewhat more in keeping with the 2-streams model, with a dorsal and ventral processing route.</p>
-    </aside>
-  </section>
+  <aside class='notes'>
+    <p>This link demonstrates the white matter connections which are linked to linguistic functioning in the brain. They are fro more extensive than suggested by the WLG model and are somewhat more in keeping with the 2-streams model, with a dorsal and ventral processing route.</p>
+  </aside>
+</section>
 
-  <section>Neuronal Oscillations
+<section>
+  <h3>Neuronal Oscillations</h3>
+  <table>
+    <tr>
+      <td>
+        <img src='resources/eeg-readings.jpg' alt='Neuron action potential gif' align='left' width=90%/>
+        <div align='right'>
+          <small align='right'>Kim, et al. (2014)</small>
+        </div>
+      </td>
+      <td>
+        <img src='resources/giphy-90.gif' alt='Neuron action potential gif' align='left' height=1000%/>
+      </td>
+    </tr>
+  </table>
+  <!--     <div align='right'>
+<small align='right'>Kim, et al. (2014)</small>
+</div> -->
+</section>
 
-    Kim, et al. (2014)
+<section>
+  <h3>Neuronal Oscillations</h3>
+  <img src='resources/giraud-poeppel-2012-1.png'/>
+  <div align='right'>
+    <small>Giraud & Poeppel (2012)</small>
+  </div>
+  <aside class='notes'>
+    <p>Giraud & Poeppel (2012)</p>
+    <p>In this article, we have articulated a set of hypotheses to investigate the relation between the perception of connected speech and neurobiological mechanisms. We developed a model at anatomic (Figs. 3 and 6), physiological (Figs. 1, 2 and 4) and computational (Fig. 5) levels. At the center of the research program lies the assumption that cortical oscillations provide ways to temporally organize the incoming speech signal. The main emerging principles are that two prerequisites for constructing intelligible representations of the speech stream are phase-locking between stimulus and cortex in (at least) two discrete time domains and the hierarchical coupling of related cortical oscillations during speech processing.</p>
+    <p>Critique - Oblesser, et al. (2012)</p>
+    <p>In sum, we argue that an overly enthusiastic focus on speech envelope and concomitantly a too narrow focus on theta oscillations, 	or the readiness to force all slower neural oscillations into a theta 	straightjacket, might not get us closer to the neural mechanics of 	speech comprehension. Without visionary, synergistic perspectives like the one offered by Giraud and Poeppel (2012) we will not 	make it there either. </p>
+    <p>Gross et al. (2013)</p>
+    <p>In summary, we report a nested hierarchy of auditory oscillations at multiple frequencies that match the frequency of
+      relevant linguistic components in continuous speech. These oscillations entrain to speech with differential hemispheric
+      preference for high (left) and low (right) frequencies. Our results indicate that temporal edges in speech increase first the coupling between auditory oscillations across frequency bands and, second, their coupling to the speech envelope.
+      We can only speculate about the nature of the observed phase/amplitude alignments. Most likely the alignments are caused by a combination of modulatory and evoked effects [55,56] where stimulus-driven activity is top-down modulated via ongoing oscillatory activity [30,61]. In this framework oscillatory activity is a mechanism for attentional selection and flexible gating of information from primary sensory areas.
+      Finally, going beyond speech perception, the entrainment of hierarchically organized oscillations between speaker and
+      listener may well have a more general role in interpersonal communication [62,63].</p>
+  </aside>
+</section>
 
-    Giraud & Poeppel (2012)
-    <aside class='notes'>
-      <p>Giraud & Poeppel (2012)</p>
-      <p>In this article, we have articulated a set of hypotheses to investigate the relation between the perception of connected speech and neurobiological mechanisms. We developed a model at anatomic (Figs. 3 and 6), physiological (Figs. 1, 2 and 4) and computational (Fig. 5) levels. At the center of the research program lies the assumption that cortical oscillations provide ways to temporally organize the incoming speech signal. The main emerging principles are that two prerequisites for constructing intelligible representations of the speech stream are phase-locking between stimulus and cortex in (at least) two discrete time domains and the hierarchical coupling of related cortical oscillations during speech processing.</p>
-      <p>Critique - Oblesser, et al. (2012)</p>
-      <p>In sum, we argue that an overly enthusiastic focus on speech envelope and concomitantly a too narrow focus on theta oscillations, 	or the readiness to force all slower neural oscillations into a theta 	straightjacket, might not get us closer to the neural mechanics of 	speech comprehension. Without visionary, synergistic perspectives like the one offered by Giraud and Poeppel (2012) we will not 	make it there either. </p>
-      <p>Gross et al. (2013)</p>
-      <p>In summary, we report a nested hierarchy of auditory oscillations at multiple frequencies that match the frequency of
-        relevant linguistic components in continuous speech. These oscillations entrain to speech with differential hemispheric
-        preference for high (left) and low (right) frequencies. Our results indicate that temporal edges in speech increase first the coupling between auditory oscillations across frequency bands and, second, their coupling to the speech envelope.
-        We can only speculate about the nature of the observed phase/amplitude alignments. Most likely the alignments are caused by a combination of modulatory and evoked effects [55,56] where stimulus-driven activity is top-down modulated via ongoing oscillatory activity [30,61]. In this framework oscillatory activity is a mechanism for attentional selection and flexible gating of information from primary sensory areas.
-        Finally, going beyond speech perception, the entrainment of hierarchically organized oscillations between speaker and
-        listener may well have a more general role in interpersonal communication [62,63].</p>
-    </aside>
-  </section>
+<section>
+  <h3>Neuronal Oscillations</h3>
+  <img src='resources/giraud-poeppel-2012-2.png'/>
+  <div align='right'>
+    <small>Giraud & Poeppel (2012)</small>
+  </div>
+  <aside class='notes'>
+    <p>Giraud & Poeppel (2012)</p>
+    <p>In this article, we have articulated a set of hypotheses to investigate the relation between the perception of connected speech and neurobiological mechanisms. We developed a model at anatomic (Figs. 3 and 6), physiological (Figs. 1, 2 and 4) and computational (Fig. 5) levels. At the center of the research program lies the assumption that cortical oscillations provide ways to temporally organize the incoming speech signal. The main emerging principles are that two prerequisites for constructing intelligible representations of the speech stream are phase-locking between stimulus and cortex in (at least) two discrete time domains and the hierarchical coupling of related cortical oscillations during speech processing.</p>
+    <p>Critique - Oblesser, et al. (2012)</p>
+    <p>In sum, we argue that an overly enthusiastic focus on speech envelope and concomitantly a too narrow focus on theta oscillations, 	or the readiness to force all slower neural oscillations into a theta 	straightjacket, might not get us closer to the neural mechanics of 	speech comprehension. Without visionary, synergistic perspectives like the one offered by Giraud and Poeppel (2012) we will not 	make it there either. </p>
+    <p>Gross et al. (2013)</p>
+    <p>In summary, we report a nested hierarchy of auditory oscillations at multiple frequencies that match the frequency of
+      relevant linguistic components in continuous speech. These oscillations entrain to speech with differential hemispheric
+      preference for high (left) and low (right) frequencies. Our results indicate that temporal edges in speech increase first the coupling between auditory oscillations across frequency bands and, second, their coupling to the speech envelope.
+      We can only speculate about the nature of the observed phase/amplitude alignments. Most likely the alignments are caused by a combination of modulatory and evoked effects [55,56] where stimulus-driven activity is top-down modulated via ongoing oscillatory activity [30,61]. In this framework oscillatory activity is a mechanism for attentional selection and flexible gating of information from primary sensory areas.
+      Finally, going beyond speech perception, the entrainment of hierarchically organized oscillations between speaker and
+      listener may well have a more general role in interpersonal communication [62,63].</p>
+  </aside>
+</section>
 
-  <section>Neuronal Coherence
+<section>
+  <h3>Neuronal Oscillations</h3>
+  <img class='stretch' src='resources/giraud-poeppel-2012-3.png' style='width:80%'/>
+  <div align='right'>
+    <small>Giraud & Poeppel (2012)</small>
+  </div>
+  <aside class='notes'>
+    <p>Giraud & Poeppel (2012)</p>
+    <p>In this article, we have articulated a set of hypotheses to investigate the relation between the perception of connected speech and neurobiological mechanisms. We developed a model at anatomic (Figs. 3 and 6), physiological (Figs. 1, 2 and 4) and computational (Fig. 5) levels. At the center of the research program lies the assumption that cortical oscillations provide ways to temporally organize the incoming speech signal. The main emerging principles are that two prerequisites for constructing intelligible representations of the speech stream are phase-locking between stimulus and cortex in (at least) two discrete time domains and the hierarchical coupling of related cortical oscillations during speech processing.</p>
+    <p>Critique - Oblesser, et al. (2012)</p>
+    <p>In sum, we argue that an overly enthusiastic focus on speech envelope and concomitantly a too narrow focus on theta oscillations, 	or the readiness to force all slower neural oscillations into a theta 	straightjacket, might not get us closer to the neural mechanics of 	speech comprehension. Without visionary, synergistic perspectives like the one offered by Giraud and Poeppel (2012) we will not 	make it there either. </p>
+    <p>Gross et al. (2013)</p>
+    <p>In summary, we report a nested hierarchy of auditory oscillations at multiple frequencies that match the frequency of
+      relevant linguistic components in continuous speech. These oscillations entrain to speech with differential hemispheric
+      preference for high (left) and low (right) frequencies. Our results indicate that temporal edges in speech increase first the coupling between auditory oscillations across frequency bands and, second, their coupling to the speech envelope.
+      We can only speculate about the nature of the observed phase/amplitude alignments. Most likely the alignments are caused by a combination of modulatory and evoked effects [55,56] where stimulus-driven activity is top-down modulated via ongoing oscillatory activity [30,61]. In this framework oscillatory activity is a mechanism for attentional selection and flexible gating of information from primary sensory areas.
+      Finally, going beyond speech perception, the entrainment of hierarchically organized oscillations between speaker and
+      listener may well have a more general role in interpersonal communication [62,63].</p>
+  </aside>
+</section>
 
-    Adapted from Fries (2005)
+<section>
+  <h3>Neuronal Coherence</h3>
 
-    Also see: Bastos, et al. (2015); Brunet, et al. (2015)
-    <aside class='notes'>
-      <p>Animations on this slide demonstrate how oscillatory behaviour can be modelled in terms of individual communicating neurons. It also demonstrates how information can be separated into redundant and useful. This could potentially help to explain exactly how the brain determines which information can be directly interpreted in the primary auditory cortex and close areas from information which requires further processing in higher areas.</p>
-    </aside>
-  </section>
+  <div align='right'>
+    <small>Adapted from Fries (2005)</small>
+    <small>Also see: Bastos, et al. (2015); Brunet, et al. (2015)</small>
+  </div>
+  <aside class='notes'>
+    <p>Animations on this slide demonstrate how oscillatory behaviour can be modelled in terms of individual communicating neurons. It also demonstrates how information can be separated into redundant and useful. This could potentially help to explain exactly how the brain determines which information can be directly interpreted in the primary auditory cortex and close areas from information which requires further processing in higher areas.</p>
+  </aside>
+</section>
 </section>
 
 <section>
