Add slides and video

--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
         <section>
           <h2>Neurophonetics
           </h2>
-          <h3>Vijay Solanki
-          </h3>
-          <p>Week 10
-          </p>
-          <p>Thurs 9th March 2017
-          </p>
+          <h4>Vijay Solanki
+          </h4>
+          <div align='center'>
+            <a href='mailto:v.solanki.1@research.gla.ac.uk'> <small>v.solanki.1@research.gla.c.uk</small></a>
+            <br/>
+          <small>University of Glasgow
+          </small>
+            <br/>
+          <small>Thurs 9th March 2017
+          </small>
+          </div>
           <aside class = "notes">
             I am your notes!
           </aside>
@@ -80,9 +85,9 @@
             <!--             <li class='fragment' align='left'>Measurement Tools</li> -->
             <li class='fragment' align='left'>Modern Advances</li>
             <ol>
-              <li class='fragment' align='left' type = 'a'>Classic Neuroimaging Studies</li>
-              <li class='fragment' align='left' type='a'>Anatomical Contributions</li>
-              <li class='fragment' align='left' type='a'>The Integration Problem</li>
+              <li class='fragment' align='left' type = 'a'>Where?</li>
+              <li class='fragment' align='left' type='a'>How?</li>
+<!--               <li class='fragment' align='left' type='a'>The Integration Problem</li> -->
             </ol>
             <li class='fragment' align='left'>Conclusion</li>
           </ol>
@@ -91,7 +96,7 @@
             <ul>
               <li>Acquire a basic understanding of the anatomy and Physiology of the human brain.</li>
               <li>Understand the beginnings of neurolinguistics (ie. the WLG model) and how the field has progressed.</li>
-              <li>Gain a rough understanding of modern neuroimaging techniques and their advantages/drawbacks.</li>
+<!--               <li>Gain a rough understanding of modern neuroimaging techniques and their advantages/drawbacks.</li> -->
               <li>Develop a basic understanding of modern thinking behind neurolinguistics/phonetics</li>
               <li>Understand what some of the classic neurolinguistic imaging studies can tell us about language processing</li>
               <li>Develop knowledge of what additional anatomical structures in the brain contribute to language processing</li>
@@ -156,8 +161,11 @@
 <section>
   <p align='left'>MYELIN encases important connections, both to protect vital information transfer routes and to speed up transmission of the action potential
   </p>
-  <img src='./resources/neurons.jpg' class='fragment' height='450px'>
-  <img src='./resources/giphy-90.gif' class='fragment' height='450px'>
+  <img src='./resources/neurons.jpg' class='fragment' data-fragment-index='1' height='450px'>
+  <img src='./resources/giphy-90.gif' class='fragment' data-fragment-index='2' height='450px'>
+  <div class='fragment' data-fragment-index='1'>
+  <small>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Web source 1.</small>
+  </div>
   <aside class='notes'>
     <p>Arrows indicate the direction of conduction of action potentials in axons (red). </p>
     <p>(a) Multipolar interneurons. Each has profusely branched dendrites, which receive signals at synapses with several hundred other neurons, and a single long axon that branches laterally and at its terminus. </p>
@@ -172,7 +180,10 @@
     Neuronal Layers
   </h3>
   <div style='float:right;'>
-    <img class='fragment' src='./resources/neuro-layers.jpg'>
+    <img class='fragment' data-fragment-index='1' src='./resources/neuro-layers.jpg'>
+    <div class='fragment' data-fragment-index='1'>
+    <small>Web source 2.</small>
+    </div>
   </div>
   <p class='fragment' align='left'>
     Neurons are arranged into layers specific to the functions that they are required to perform
@@ -705,8 +716,10 @@
     <p>Broca’s and Wernicke’s areas are connected via the <span class='fragment highlight-red'>ARCUATE FASCICULUS</span></p>
     <p class='fragment'>This view was dominant for more than a century and still carries weight today</p>
     <p class='fragment'>It is known as the Wernicke-Lichtheim-Gerschwind Model (WLG model), named after those that helped to develop it</p>
+    <div align='right'>
+      <small>Hagoort (2014)</small>
+    </div>
   </div>
-  <small align='right'>Hagoort (2014)</small>
   <aside class='notes'>
     <p>A link between the production and comprehension areas is necessary to produce a percept of language/speech, thus the WLG model was posited.</p>
     <p>Recall that the Arcuate Fasciculus is a bundle of WHITE MATTER which acts as an information transfer highway.</p>
@@ -918,10 +931,10 @@ Web Source [4]</section>
       <h3>Lateralisation of language functions</h3>
       <table style='font-size:25px'>
         <tr>
-          <th>
+          <th style='width:50%' align='center'>
             Left Hemisphere
           </th>
-          <th>
+          <th style='width:50%' align='center'>
             Right Hemisphere
           </th>
         <tr>
@@ -942,7 +955,7 @@ Web Source [4]</section>
           </td>
         </tr>
       </table>
-      <p></p>
+      <br/>
       <small align='right'>Zatorre, et al. (2002); Scott, et al. (2009); Francis & Driscoll (2006); Friederici (2011)</small>
       <aside class='notes'>
         <p>
@@ -971,9 +984,11 @@ Web Source [4]</section>
     <p align='right'>
       Chinese English Spanish&nbsp;&nbsp;&nbsp;
     </p>
-    <small align='right'>
-      Valaki et al. (2004)
-    </small>
+    <div  align='right'>
+      <small>
+        Valaki et al. (2004)
+      </small>
+    </div>
     <aside class='notes'>
       <p>large groups of native speakers
         of Mandarin Chinese/English/Spanish
@@ -1098,15 +1113,15 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
     <tr>
       <td>
         <img src='resources/eeg-readings.jpg' alt='Neuron action potential gif' align='left' width=90%/>
-        <div align='right'>
-          <small align='right'>Kim, et al. (2014)</small>
-        </div>
       </td>
-      <td>
-        <img src='resources/giphy-90.gif' alt='Neuron action potential gif' align='left' height=1000%/>
+      <td style='width:20%;vertical-align:middle' align='left'>
+        <img src='resources/giphy-90.gif' alt='Neuron action potential gif' align='center' height=1000%/>
       </td>
     </tr>
   </table>
+  <div align='right'>
+    <small align='right'>Kim, et al. (2014)</small>
+  </div>
   <!--     <div align='right'>
 <small align='right'>Kim, et al. (2014)</small>
 </div> -->
@@ -1177,10 +1192,15 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
 
 <section>
   <h3>Neuronal Coherence</h3>
-
-  <div align='right'>
+  <div class='stretch'>
+  <video controls>
+    <source src='resources/Neurophonetics.mp4' type=video/mp4>
+  </video>
+  <div align='left'>
     <small>Adapted from Fries (2005)</small>
+    <br/>
     <small>Also see: Bastos, et al. (2015); Brunet, et al. (2015)</small>
+  </div>
   </div>
   <aside class='notes'>
     <p>Animations on this slide demonstrate how oscillatory behaviour can be modelled in terms of individual communicating neurons. It also demonstrates how information can be separated into redundant and useful. This could potentially help to explain exactly how the brain determines which information can be directly interpreted in the primary auditory cortex and close areas from information which requires further processing in higher areas.</p>
@@ -1327,15 +1347,15 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
       <br></br>
     <li><a align='left' href='http://thebrain.mcgill.ca/flash/d/d_02/d_02_cl/d_02_cl_vis/d_02_cl_vis.html'>thebrain.mcgill.ca
       </a></li>
-    <br></br>
+<!--     <br></br>
   <li><a align='left' href='http://neuropathology-web.org/chapter2/chapter2bCerebralinfarcts.html'>neuropathology-web.org
     </a></li>
   <br></br>
 <li><a align='left' href='http://www.kgu.de/bic/common.html'>kgu.de
   </a></li>
-<br></br>
-<li><a align='left' href='http://cfmm.robarts.ca/tools/3t-mri/'>cfmm.robarts.ca
-  </a></li>
+<br></br> -->
+<!-- <li><a align='left' href='http://cfmm.robarts.ca/tools/3t-mri/'>cfmm.robarts.ca
+  </a></li> -->
 </ol>
 </section>
 </section>
