--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
         <img src='resources/eeg-readings.jpg' alt='Neuron action potential gif' align='left' width=90%/>
       </td>
       <td style='width:20%;vertical-align:middle' align='left'>
-        <img src='resources/giphy-90.gif' alt='Neuron action potential gif' align='center' height=1000%/>
+        <img src='resources/giphy-90.gif' alt='Neuron action potential gif' align='center' height='800px'/>
       </td>
     </tr>
   </table>
