add pdf export preferences

--- a/index.html
+++ b/index.html
@@ -1475,6 +1475,7 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
       { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
     ]
   });
+  Reveal.configure({ pdfMaxPagesPerSlide: 1 });
 </script>
 </body>
 </html>
