correct image sizing issue

--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,12 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
 
 <section>
   <h3>Neuronal Oscillations</h3>
-  <img class='stretch' src='resources/giraud-poeppel-2012-3.png' style='width:80%'/>
+  <div align='center'>
+  <div style='width:60%'>
+  <img src='resources/giraud-poeppel-2012-3.png' align='center'/>
+  </div>
+  </div>
+
   <div align='right'>
     <small>Giraud & Poeppel (2012)</small>
   </div>
@@ -1192,8 +1197,8 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
 
 <section>
   <h3>Neuronal Coherence</h3>
-  <div class='stretch'>
-  <video controls>
+  <div>
+  <video controls width='85%'>
     <source src='resources/Neurophonetics.mp4' type=video/mp4>
   </video>
   <div align='left'>
