Adjust browser history behaviour

--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
     slideNumber: false,
 
     // Push each slide change to the browser history
-    history: true,
+    history: false,
 
     // Enable keyboard shortcuts for navigation
     keyboard: true,
