--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,7 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
     slideNumber: false,
 
     // Push each slide change to the browser history
-    history: false,
+    history: true,
 
     // Enable keyboard shortcuts for navigation
     keyboard: true,
