--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
 </section>
 
 <section>
-  <iframe width="100%" height="600" src="https://www.youtube.com/embed/aVhYN7NTIKU" frameborder="0" allowfullscreen></iframe>
+  <iframe width="100%" height="600" src="https://www.youtube.com/embed/3oef68YabD0" frameborder="0" allowfullscreen></iframe>
   <aside class='notes'>
     <p>In WERNICKE’S aphasia - Patients can utter strings of speech which are grammatically ok but make NO SENSE.
       e.g word finding difficulties. E.g. table [chair]</p>
@@ -819,7 +819,7 @@ Web Source [4]</section>
           <source src='resources/06_40.wav' type='audio/wav'>
         </audio>
         <p  class='fragment' data-fragment-index='5' style='font-size:50%'>Spectrally Rotated Speech (RSp)</p>
-        <audio controls class='fragment' data-fragment-index='1'>
+        <audio controls class='fragment' data-fragment-index='2'>
           <source src='resources/06_r40.wav' type='audio/wav'>
         </audio>
         <p class='fragment' data-fragment-index='5' style='font-size:50%'>Vocoded Speech (VCo)</p>
@@ -827,7 +827,7 @@ Web Source [4]</section>
           <source src='resources/06_40n.wav' type='audio/wav'>
         </audio>
         <p  class='fragment' data-fragment-index='5' style='font-size:50%'>Rotated vocoded Speech (RVCo)</p>
-        <audio controls class='fragment' data-fragment-index='2'>
+        <audio controls class='fragment' data-fragment-index='1'>
           <source src='resources/06_r40n.wav' type='audio/wav'>
         </audio>
       </div>
