--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
 </section>
 
 <section>
-  <h3>Neuronal Oscillations</h3>
+  <h3>Neuronal Entrainment</h3>
   <img src='resources/giraud-poeppel-2012-1.png'/>
   <div align='right'>
     <small>Giraud & Poeppel (2012)</small>
@@ -1166,7 +1166,7 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
 </section>
 
 <section>
-  <h3>Neuronal Oscillations</h3>
+  <h3>Neuronal Entrainment</h3>
   <img src='resources/giraud-poeppel-2012-2.png'/>
   <div align='right'>
     <small>Giraud & Poeppel (2012)</small>
@@ -1187,7 +1187,7 @@ courtesy of Dr Anja Lowit (Strathclyde) -->
 </section>
 
 <section>
-  <h3>Neuronal Oscillations</h3>
+  <h3>Neuronal Entrainment</h3>
   <div align='center'>
   <div style='width:60%'>
   <img src='resources/giraud-poeppel-2012-3.png' align='center'/>
